# rooster

./: .gitignore  Cargo.toml  LICENSE  README.md  gale.cfg  rooster.cfg
conf/: readme.txt  server.key
server/testscripts/: testbinaryresp.js  testfileio.js  testfolderio.js  testhttppost.js  testhttppostmultipart.js  testrequestmultipart.js
src/: admin.rs  api.rs  jsscript.rs  logger.rs  main.rs  props.rs  resources.rs  rhaiscript.rs  scripts.rs  strings.rs
src/admin/: resources.rs
src/api/: crypto.rs  encode.rs  fileio.rs  fs.rs  html.rs  httpio.rs  props.rs  rnd.rs  uuid.rs  zip.rs
src/api/crypto/: crypto.rs
src/api/encode/: encode.rs
src/api/fs/: fileio.rs  folderio.rs
src/api/httpio/: httpio.rs
src/api/rnd/: rnd.rs
src/api/uuid/: uuid.rs
src/api/zip/: zipio.rs  zipio.rs.save
web/: index.html
web/folderwithnodefault/: noindex.html
web/gale/: shutdown.html
web/gale/box/: test.html
web/gale/box/testfolder/: appref.html  testappref.js
web/gale/box/testscripts/: testbabel.js  testbinaryresp.js  testcrypto.js  testfileio.js  testfolderio.js  testhttpgetbinary.js  testprops.js  testprops.json  testrnd.js  (+2 more)
web/testfolder/: index.html  test.js
webroot/: index.html
webroot/folderwithnodefault/: noindex.html
webroot/scriptsfolder/: simple.js  simple.rhai
webroot/testfolder/: index.html
webroot/testscripts/: simple.rhai  testbinaryresp.js  testcrypto.js  testencode.js  testexternallib.js  testfileio.js  testfolderio.js  testhtmlselect.js  testhtmlselectfromfile.js  testhtmlselectfromurl.js  testhttpgetbinary.js  testhttpgettext.js  testhttppost.js  testhttppostmultipart.js  testlibcall.js  testrequest.js  testrnd.js  testsimple.js  testuuid.js  testzipio.js
webroot/testscripts/lib/: tinycolor.js
(+1 files in other folders)
