[package]
name = "rooster"
version = "0.2.0"
authors = ["elasmojs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "0.8.0"
bytes = "0.5.5"
lazy_static = "1.4.0"
dotproperties = "0.1.0"
hyper = "0.13.6"
hyper-staticfile = "0.5.3"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.5"
multipart = "0.17.0"
#rhai = "0.15.1"
ducc = "0.1.5"
webbrowser = "0.5.4"

